--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 asn1crypto==0.24.0
 atomicwrites==1.3.0
+attrs==19.3.0
+backports-abc==0.5
+backports.functools-lru-cache==1.6.1
+backports.shutil-get-terminal-size==1.0.0
+bleach==3.1.1
 compizconfig-python==0.9.13.1
 configparser==4.0.2
 contextlib2==0.6.0.post1
@@ -79,6 +84,7 @@ Send2Trash==1.5.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.15.0
+sklearn==0.0
 subprocess32==3.5.4
 telebot==0.0.3
 terminado==0.8.3
