--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ matplotlib==2.2.5
 mistune==0.8.4
 more-itertools==5.0.0
 nbconvert==5.6.1
+newsapi-python==0.2.6
 nbformat==4.4.0
 pandocfilters==1.4.2
 pathlib2==2.3.5
