--- a/requirements.txt
+++ b/requirements.txt
@@ -46,25 +46,20 @@ pyzmq==19.0.0
 requests==2.7.0
 retrying==1.3.3
 scandir==1.10.0
-scikit-learn==0.20.4
-scipy==1.2.3
-seaborn==0.9.1
+schedule==0.6.0
 SecretStorage==2.3.1
 selenium==3.141.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.15.0
-sklearn==0.0
 subprocess32==3.5.4
 telebot==0.0.3
 terminado==0.8.3
 testpath==0.4.4
-tornado==5.1.1
 traitlets==4.3.3
 urllib3==1.25.10
 wcwidth==0.1.8
 webencodings==0.5.1
-xgboost==0.82
 zipp==1.2.0
 zope.interface==4.7.1
