--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cycler==0.10.0
 DateTime==4.3
 decorator==4.4.2
 defusedxml==0.6.0
+Flask==1.1.1
 graphviz==0.13.2
 idna==2.10
 importlib-metadata==1.5.0
